# AutoDeafen_UNIX

./: CMakeLists.txt  README.md  about.md  changelog.md  justa_doge.autodeafen_unix.geode  mod.json
.github/workflows/: build.yml
src/: globals.cpp  globals.h  gui.h  helpers.h  ipc.h  main.cpp
